# kadai-sorter

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-07-06-kadai-sorter.md
docs/superpowers/specs/: 2026-07-06-kadai-sorter-design.md
examples/: rules.toml
report/: README.md  benchmark.csv  report.tex
src/kadai_sorter/: __init__.py  benchmark.py  charts.py  cli.py  config.py  executor.py  models.py  parser.py  planner.py
tests/: test_benchmark.py  test_charts.py  test_cli.py  test_config.py  test_executor.py  test_integration.py  test_parser.py  test_planner.py
